Thu Nov  1 19:18:34 2001  Owen Taylor  <otaylor@redhat.com>

	* demos/gtk-demo/stock_browser.c (do_stock_browser): 
	Set a reasonable default height for the window.

	* demos/gtk-demo/stock_browser.c (id_to_macro): Fix
	bug where subsequent '-' weren't converted to '_'.
	(#59550, Matthias Clasen)

	* demos/gtk-demo/appwindow.c (menu_items): Don't right 
	justify the Help menu - just include a comment on
	how to do it. (#63539, 	Marius Andreiana)

	* gtk/gtkiconfactory.c (gtk_icon_set_get_sizes): Don't 
	list GTK_ICON_SIZE_INVALID.

	* demos/gtk-demo/stock_browser.c: Show the biggest available
	size, not a fixed size. (Often reported, including #63539, 
	Marius Andreiana)

Thu Nov  1 19:11:35 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkrbtree.c (gtk_rbtree_reorder_fixup): Fix reorder_fixup,
	#59583

	* gtk/gtktreeselection.c (gtk_tree_selection_set_mode): fix
	warning.

Thu Nov  1 16:54:00 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktypeutils.h: Make GtkFunction return boolean, not gint.
	(Daniel Elstner).

Thu Nov  1 16:20:56 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkimcontext.[ch]: Add:
	  - A ::retrieve_surrounding signal that asks the widget for
	    context around the insertion point.
	  - A ::delete_surrounding signal that asks the widget to 
	    delete context aroudn the insertion point.
	  - gtk_im_context_set_context() for widgets to set context
	    around the insertion point in response to ::retrieve_context.
	  - gtk_im_context_get_context() for context to get context
	    around the insertion point

	* gtkmarshal.list: Add BOOL:INT,INT

	* gtk/gtkimmulticontext.c: Proxy the get_surrounding() /
	set_surrounding() methods, and the ::retrieve_surrounding /
	::delete_surrounding signals.

	* gtk/gtkentry.c gtk/gtktreeview.c: Hook up to the
	GtkIMContext::retrieve_surrounding / ::delete_surrounding
	signals.

Thu Nov  1 15:45:04 2001  Jonathan Blandford  <jrb@redhat.com>
